# mdev-68

./: .dockerignore.prod  .env.dev  .env.prod.template  .env.test  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  PARCEL_TRACKING_API.md  PRODUCTION.md  README-development.md  README-production.md  README.md  deploy-prod.sh  dev.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.devcontainer/: README.md  devcontainer.json  docker-compose.yml
config/: redis.conf
flasx/: main.py
flasx/core/: deps.py  security.py
flasx/models/: __init__.py  customer_model.py  delivery_staff_model.py  item_model.py  parcel_model.py  receiver_model.py  sender_model.py  station_model.py  user_model.py  vehicle_model.py
flasx/routers/: __init__.py  health.py
flasx/routers/v1/: __init__.py  authentication_router.py  customer_router.py  delivery_staff_router.py  hello_router.py  item_router.py  items.py  parcel_router.py  receiver_router.py  receivers.py  sender_router.py  station_router.py  user_router.py  vehicle_router.py
flasx/schemas/: customer_schema.py  delivery_staff_schema.py  item_schema.py  parcel_schema.py  receiver_schema.py  sender_schema.py  station_schema.py  vehicle_schema.py
monitoring/: prometheus-dev.yml  prometheus.yml
nginx/: nginx.conf
performance-tests/: locustfile.py  test_index.py
scripts/: run-api-dev
tests/: base.py  test_customer.py  test_hello.py
